# Epicure

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pixi.toml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: ci.yml  cross-platform.yml
Concatenate-epicured-movies/: index.html
Display/: index.html
Edit/: index.html
Inspect/: index.html
Installation/: index.html
Output/: index.html
Preferences/: index.html
Segment-option/: index.html
Start-epicure/: index.html
Track/: index.html
Tutorials/: index.html
api/: epicure.html  index.html  search.js
api/epicure/: Utils.html  _version.html  appose_epyseg.html  concatenate_movie.html  displaying.html  editing.html  epicuring.html  epiwidgets.html  geff_export.html  geff_import.html  inspecting.html  laptrack_centroids.html  laptrack_overlaps.html  outputing.html  preferences.html  resources.html  start_epicuring.html  tm_loader.html  tracking.html  trackmate_export.html
docs/: Installation.md  Output.md  Segment-option.md  Start-epicure.md  Tutorials.md  index.md
notebooks/: EpiCure_DeXtrusion_Interaction.ipynb  EpiCure_Timing.ipynb
search/: search_index.json
src/epicure/: Utils.py  __init__.py  _version.py  appose_epyseg.py  displaying.py  editing.py  epicuring.py  epiwidgets.py  geff_export.py  geff_import.py  inspecting.py  laptrack_overlaps.py  outputing.py  preferences.py  start_epicuring.py  tracking.py
src/epicure/resources/: pixi.toml
src/tests/: conftest.py  test_basics.py  test_editings.py  test_epyseg.py  test_geff.py  test_operations.py  test_outputs.py  test_suspects.py  test_tracking.py  test_trackmate.py  test_utils.py
test_data/: 013_crop_witherrors.xml
