[build-system]
requires = ["setuptools==68.2.2", "setuptools_scm>=7.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epicure"
version = "1.5.5"
description = "Napari plugin to manually correct epithelia segmentation in movies"
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Gaëlle Letort"},
]
classifiers = [
    "Framework :: napari",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari[all]",
	"vispy", ## something weird happens between napari and vispy 0.16. Might be fixed soonish and could be removed then
    "numpy",
    "qtpy",
	"bioio",
	"bioio-bioformats",
	"bioio-tifffile",
    "scikit-image",
    "opencv_python_headless<4.9.0",
    "roifile",
    "PyQt6-WebEngine",
    "magicgui",
    "scipy",
    "xlsxwriter",
    "plotly",
    "kaleido",
    "imagecodecs",
    "edt",
    "packaging",
    "laptrack>=0.15.0",
    "joblib",
    "appose",
]

[project.optional-dependencies]
pyqt5 = [
	"PyQt5",
	"PyQtWebEngine",
]

testing = [
    "pytest",
    "pytest-qt",
    "pytest-xvfb",    # ← handles virtual display automatically on Linux
    "pytest-cov",
	"napari[testing]",
]

[project.urls]
"Bug Tracker" = "https://github.com/Image-Analysis-Hub/Epicure/issues"
"Documentation" = "https://image-analysis-hub.github.io/Epicure/"
"Source Code" = "https://github.com/Image-Analysis-Hub/Epicure"
"User Support" = "https://github.com/Image-Analysis-Hub/Epicure/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

# Explicitly list packages to include
packages = [
    "epicure",
]

[tool.setuptools_scm]
write_to = "src/epicure/_version.py"

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.entry-points."napari.manifest"]
epicure = "epicure:napari.yaml"
